# flx-c

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/: flx.h
scripts/: build.bat  build.sh
src/: CMakeLists.txt  flx.c
test/: CMakeLists.txt  main.c
